<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nav_root"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="1dp">

    <LinearLayout
        android:id="@+id/nav_ll1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:tag="0">

        <ImageView
            android:id="@+id/nav_image1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/nav_appointment" />

        <TextView
            android:id="@+id/nav_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/nav_text1"
            android:textColor="@color/ap_nav_color"
            android:textSize="@dimen/sp_11"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nav_ll2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:tag="1">

        <ImageView
            android:id="@+id/nav_image2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/nav_live" />

        <TextView
            android:id="@+id/nav_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/nav_text2"
            android:textColor="@color/ap_nav_color"
            android:textSize="@dimen/sp_11"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/nav_ll3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:tag="2">

        <RelativeLayout
            android:id="@+id/nav_image3_rl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <ImageView
                android:id="@+id/nav_image3"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/nav_message" />

            <View
                android:id="@+id/nav_discovery_red_point"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginLeft="14dp"
                android:background="@drawable/shape_corner_circle_red"
                android:visibility="gone" />
        </RelativeLayout>

        <TextView
            android:id="@+id/nav_text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nav_image3_rl"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="1dp"
            android:text="@string/nav_text3"
            android:textColor="@color/ap_nav_color"
            android:textSize="@dimen/sp_11"
            android:textStyle="bold" />
    </RelativeLayout>

    <!--<LinearLayout-->
        <!--android:id="@+id/nav_ll4"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1"-->
        <!--android:gravity="center"-->
        <!--android:orientation="vertical"-->
        <!--android:tag="3">-->

        <!--<ImageView-->
            <!--android:id="@+id/nav_image4"-->
            <!--android:layout_width="20dp"-->
            <!--android:layout_height="20dp"-->
            <!--android:src="@drawable/nav_twitter" />-->

        <!--<TextView-->
            <!--android:id="@+id/nav_text4"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="1dp"-->
            <!--android:text="@string/nav_text4"-->
            <!--android:textColor="@color/ap_nav_color"-->
            <!--android:textSize="@dimen/sp_11" />-->
    <!--</LinearLayout>-->

    <LinearLayout
        android:id="@+id/nav_ll4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:tag="4">

        <ImageView
            android:id="@+id/nav_image4"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/nav_my" />

        <TextView
            android:id="@+id/nav_text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/nav_text4"
            android:textColor="@color/ap_nav_color"
            android:textSize="@dimen/sp_12" />
    </LinearLayout>

</LinearLayout>